// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header component should render correctly with children 1`] = `
<header>
  <nav
    className="sc-eCYdqJ iIzueu"
  >
    <div
      className="sc-dkzDqf sc-jSMfEi iEAnbM gcjweL"
    >
      <div>
        This
      </div>
      <div>
        is
      </div>
      <div>
        cool
      </div>
    </div>
  </nav>
</header>
`;

exports[`Header component should render correctly without children 1`] = `
<header>
  <nav
    className="sc-eCYdqJ iIzueu"
  >
    <div
      className="sc-dkzDqf sc-jSMfEi iEAnbM gcjweL"
    />
  </nav>
</header>
`;
